Sat Nov  5 11:20:57 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* cont.c (cont_new): disable optimization if clang's version is
	  3.8.0.  [ruby-core:77894] [Bug #12893]

Sat Nov  5 10:07:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_file.rb (TestFile#test_stat): fix noatime case.
	  [ruby-core:77943] [Bug #12903]

Fri Nov  4 17:52:44 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heap_page_resurrect): do not return tomb_pages when
	  page->freelist == NULL.
	  [Bug #12670]

Fri Nov  4 16:31:45 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_dtoa): round to even, instead of rounding to
	  nearest.  [ruby-core:77864] [Bug #12889]

Fri Nov  4 15:31:00 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: Add compiler version message into rbconfig
	  as RbConfig::CONFIG['CC_VERSION_MESSAGE']. [Feature #12896]

Fri Nov  4 13:03:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (rb_int_digits): Fix exception message
	  [ruby-core:77502] [Bug #12815]

Fri Nov  4 10:51:16 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/pathname/pathname.c (path_hash): fix unnormalized Fixnum
	  value bug on mingw/mswin.

Fri Nov  4 10:35:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::Entry_#copy): ensure that the
	  source entry exists first, to fix error for non-existent entry.
	  [ruby-core:77885] [Bug #12892]

Thu Nov  3 21:45:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c: Import changes from ruby/bigdecimal
	  repository.

Thu Nov  3 15:01:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c: include sys/sysmacros.h for ArchLinux which deprecated
	  use of major() and minor() in sys/types.h.

Wed Nov  2 08:45:49 2016  Dmitry Gritsay  <unseductable@gmail.com>

	* doc/extension.rdoc: set ANYARGS as arguments for func1 and func2.

	* doc/extension.rdoc: mention the exception object which is passed
	  to func2 as the second argument.  [Fix GH-1471]
