@@ -1,3 +1,9 @@
+Sat Nov  5 11:53:02 2016  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* test/ruby/test_refinement.rb (test_refine_alias_in_subclass):
+	  add a test to check that alias in subclasses can be refined.
+	  [ruby-core:69374] [Bug #11186]
+
 Sat Nov  5 11:20:57 2016  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* cont.c (cont_new): disable optimization if clang's version is
